Explicitly clear AUXIO4M_FTC bit in FTC_FLIP macro used on pseudo-dma for floppy, as well as AUXIO4C_FTC bit for sun4c. A comment in the macro says AUXIO4M_FTC bit is auto-clear, but my two SS20s (including compatible) with 150MHz hyperSPARCs get data_overrun without it, and no bad side effect on SS5 (works with and without this change).

Closes PR port-sparc/42516, which is the last one of a bunch of
floppy issue on NetBSD/sparc since NetBSD 2.0 days. See
http://mail-index.NetBSD.org/port-sparc/2009/12/20/msg000484.html
for details.